Add missing citations

--- a/optimset.bib
+++ b/optimset.bib
@@ -333,6 +333,15 @@
     howpublished = {Distinguished lecture for the PolyU 85\textsuperscript{th} and AMA 50\textsuperscript{th} Anniversary presented at the Department of Applied Mathematics, The Hong Kong Polytechnic University}
 }
 
+@article{Yuan_2015,
+    title        = {Recent advances in trust region algorithms},
+    author       = {Yuan, Y.},
+    year         = 2015,
+    journal      = {Math. Program.},
+    volume       = 151,
+    pages        = {249--281}
+}
+
 @phdthesis{Zhang_2012,
     title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
     author       = {Zhang, Z.},
