--- a/optimset.bib
+++ b/optimset.bib
@@ -128,7 +128,7 @@
     author       = {Ghanbari, H. and Scheinberg, K.},
     year         = 2017,
     number       = {17T-005},
-    institution  = {COR\@L}
+    institution  = {COR@L}
 }
 
 @article{Hooke_Jeeves_1961,
@@ -329,8 +329,8 @@
 @misc{Xie_Yuan_2022,
     title        = {Least {$H^2$} norm updating quadratic interpolation model function for derivative-free trust-region algorithms},
     author       = {Xie, P. and Yuan, Y.},
-    year         = 2022,
-    howpublished = {Distinguished lecture for the PolyU 85\textsuperscript{th} and AMA 50\textsuperscript{th} Anniversary presented at the Department of Applied Mathematics, The Hong Kong Polytechnic University}
+    year         = 2023,
+    howpublished = {arXiv:2302.12017}
 }
 
 @article{Yuan_2015,
