--- a/optimset.tex
+++ b/optimset.tex
@@ -17,7 +17,7 @@
 
 % Cross-referencing
 \usepackage[
-    % pdfusetitle,
+    pdfusetitle,
     hyperfootnotes=false,
 ]{hyperref}
 \usepackage{url}
@@ -99,8 +99,8 @@
 \newcommand{\createlist}[3]{
     \expandafter\newcommand\expandafter{\csname #1\endcsname}[1]{
         \begingroup
-        % \def\and{ ; }
-        % \hypersetup{#2={##1}}
+        \def\and{ ; }
+        \hypersetup{#2={##1}}
         \def\and{\ifhmode\unskip\nobreak\fi\ $\cdot$ }
         \paragraph*{#3} ##1
         \endgroup
