change emdash to colon in title of COBYQA

--- a/optimset.bib
+++ b/optimset.bib
@@ -304,7 +304,7 @@
 }
 
 @misc{Ragonneau_Zhang_2023,
-    title        = {{COBYQA --- Constrained Optimization BY Quadratic Approximations}},
+    title        = {{COBYQA: Constrained Optimization BY Quadratic Approximations}},
     author       = {Ragonneau, T. M. and Zhang, Z.},
     year         = 2023,
     howpublished = {\url{https://www.cobyqa.com/}}
