--- a/optimset.bib
+++ b/optimset.bib
@@ -1,359 +1,260 @@
 %% optimset.bib
 %% Copyright 2023 Tom M. Ragonneau and Zaikun Zhang
-@article{Audet_Dennis_2006,
-    title        = {Mesh adaptive direct search algorithms for constrained optimization},
-    author       = {Audet, C. and Dennis, Jr., J. E.},
-    year         = 2006,
-    journal      = {SIAM J. Optim.},
-    volume       = 17,
-    pages        = {188--217}
-}
-
 @book{Audet_Hare_2017,
     title        = {Derivative-Free and Blackbox Optimization},
     author       = {Audet, C. and Hare, W.},
-    year         = 2017,
+    series       = {Springer Ser. Oper. Res. Financ. Eng.},
     publisher    = {Springer},
-    series       = {Springer Ser. Oper. Res. Financ. Eng.}
+    year         = 2017,
 }
 
 @article{Bandeira_Scheinberg_Vicente_2012,
     title        = {Computation of sparse low degree interpolating polynomials and their application to derivative-free optimization},
     author       = {Bandeira, A. S. and Scheinberg, K. and Vicente, L. N.},
-    year         = 2012,
     journal      = {Math. Program.},
     volume       = 134,
-    pages        = {223--257}
+    pages        = {223--257},
+    year         = 2012,
 }
 
-@article{Berahas_Byrd_Nocedal_2019,
-    title        = {Derivative-free optimization of noisy functions via quasi-{Newton} methods},
-    author       = {Berahas, A. S. and Byrd, R. H. and Nocedal, J.},
-    year         = 2019,
-    journal      = {SIAM J. Optim.},
-    volume       = 29,
-    pages        = {965--993}
-}
-
-@article{Booker_Etal_1999,
-    title        = {A rigorous framework for optimization of expensive functions by surrogates},
-    author       = {Booker, A. J. and Dennis, Jr., J. E. and Frank, P. D. and Serafini, D. B. and Torczon, V. and Trosset, M. W.},
-    year         = 1999,
-    journal      = {Struct. Multidiscip. Optim.},
-    volume       = 17,
-    pages        = {1--13}
+@article{Conejo_Karas_Pedroso_2015,
+    title        = {A trust-region derivative-free algorithm for constrained optimization},
+    author       = {Conejo, P. D. and Karas, E. W. and Pedroso, L. G.},
+    journal      = {Optim. Methods Softw.},
+    volume       = 30,
+    pages        = {1126--1145},
+    year         = 2015,
 }
 
 @book{Conn_Gould_Toint_2000,
     title        = {Trust-Region Methods},
     author       = {Conn, A. R. and Gould, N. I. M. and Toint, Ph. L.},
-    year         = 2000,
+    series       = {MPS-SIAM Ser. Optim.},
     publisher    = {SIAM},
-    series       = {MPS-SIAM Ser. Optim.}
+    year         = 2000,
 }
 
 @inproceedings{Conn_Scheinberg_Toint_1998,
     title        = {A derivative free optimization algorithm in practice},
     author       = {Conn, A. R. and Scheinberg, K. and Toint, Ph. L.},
-    year         = 1998,
     booktitle    = {Proceedings of the 7th AIAA/USAF/NASA/ISSMO Symposium on Multidisciplinary Analysis and Optimization},
     publisher    = {AIAA},
-    pages        = {129--139}
+    pages        = {129--139},
+    year         = 1998,
 }
 
 @book{Conn_Scheinberg_Vicente_2009,
     title        = {Introduction to Derivative-Free Optimization},
     author       = {Conn, A. R. and Scheinberg, K. and N. Vicente, L.},
-    year         = 2009,
+    series       = {MPS-SIAM Ser. Optim.},
     publisher    = {SIAM},
-    series       = {MPS-SIAM Ser. Optim.}
-}
-
-@inproceedings{Conn_Toint_1996,
-    title        = {An algorithm using quadratic interpolation for unconstrained derivative free optimization},
-    author       = {Conn, A. R. and Toint, Ph. L.},
-    year         = 1996,
-    booktitle    = {Nonlinear Optimization and Applications},
-    publisher    = {Springer},
-    pages        = {27--47},
-    editor       = {{Di Pillo}, G. and Giannessi, F.}
+    year         = 2009,
 }
 
 @inproceedings{Custodio_Scheinberg_Vicente_2017,
     title        = {Methodologies and software for derivative-free optimization},
     author       = {Cust{\'{o}}dio, A. L. and Scheinberg, K. and Vicente, L. N.},
-    year         = 2017,
     booktitle    = {Advances and Trends in Optimization with Engineering Applications},
+    editor       = {Terlaky, T. and Anjos, M. F. and Ahmed, S.},
     publisher    = {SIAM},
     pages        = {495--506},
-    editor       = {Terlaky, T. and Anjos, M. F. and Ahmed, S.}
+    year         = 2017,
 }
 
 @article{Dennis_Schnabel_1979,
-    title        = {Least change secant updates for quasi-{Newton} methods},
+    title        = {Least change secant updates for quasi-{N}ewton methods},
     author       = {Dennis, Jr., J. E. and Schnabel, R. B.},
-    year         = 1979,
     journal      = {SIAM Rev.},
     volume       = 21,
-    pages        = {443--459}
+    pages        = {443--459},
+    year         = 1979,
 }
 
 @article{Dodangeh_Vicente_Zhang_2016,
     title        = {On the optimal order of worst case complexity of direct search},
     author       = {Dodangeh, M. and Vicente, L. N. and Zhang, Z.},
-    year         = 2016,
     journal      = {Optim. Lett.},
     volume       = 10,
-    pages        = {699--708}
+    pages        = {699--708},
+    year         = 2016,
 }
 
-@article{Eldred_Etal_2022,
+@article{Eldred_Etal_2023,
     title        = {Derivative-free optimization of a rapid-cycling synchrotron},
     author       = {Eldred, J. S. and Larson, J. and Padidar, M. and Stern, E. and Wild, S. M.},
-    year         = 2022,
-    journal      = {Optim. Eng.}
+    journal      = {Optim. Eng.},
+    volume       = 24,
+    pages        = {1289--1319},
+    year         = 2023,
 }
 
 @inproceedings{Gazaix_Etal_2019,
     title        = {Industrial application of an advanced bi-level {MDO} formulation to aircraft engine pylon optimization},
     author       = {Gazaix, A. and Gallard, F. and Ambert, V. and Gu{\'{e}}not, D. and Hamadi, M. and Grihon, S. and Sarouille, P. and Druot, T. and Brezillon, J. and Gachelin, V. and Plakoo, J. and Desfachelles, N. and Bartoli, N. and Lefebvre, T. and G{\"{u}}rol, S. and Pauwels, B. and Vanaret, C. and Lafage, R.},
-    year         = 2019,
     booktitle    = {AIAA Aviation 2019 Forum},
     publisher    = {AIAA},
-    address      = {Dallas, TX, USA}
+    year         = 2019,
 }
 
 @techreport{Ghanbari_Scheinberg_2017,
     title        = {Black-box optimization in machine learning with trust region based derivative free algorithm},
     author       = {Ghanbari, H. and Scheinberg, K.},
-    year         = 2017,
     number       = {17T-005},
-    institution  = {COR@L}
-}
-
-@article{Hooke_Jeeves_1961,
-    title        = {Direct search solution of numerical and statistical problems},
-    author       = {Hooke, R. and Jeeves, T. A.},
-    year         = 1961,
-    journal      = {J. ACM},
-    volume       = 8,
-    pages        = {212--229}
-}
-
-@article{Kolda_Lewis_Torczon_2003,
-    title        = {Optimization by direct search: new perspectives on some classical and modern methods},
-    author       = {Kolda, T. G. and Lewis, R. M. and Torczon, V.},
-    year         = 2003,
-    journal      = {SIAM Rev.},
-    volume       = 45,
-    pages        = {385--482}
+    institution  = {COR@L},
+    year         = 2017,
 }
 
 @article{Larson_Menickelly_Wild_2019,
     title        = {Derivative-free optimization methods},
     author       = {Larson, J. and Menickelly, M. and Wild, S. M.},
-    year         = 2019,
     journal      = {Acta Numer.},
     volume       = 28,
-    pages        = {287--404}
-}
-
-@article{Nelder_Mead_1965,
-    title        = {A simplex method for function minimization},
-    author       = {Nelder, J. A. and Mead, R.},
-    year         = 1965,
-    journal      = {Comput. J.},
-    volume       = 7,
-    pages        = {308--313}
-}
-
-@book{Nocedal_Wright_2006,
-    title        = {Numerical Optimization},
-    author       = {Nocedal, J. and Wright, S. J.},
-    year         = 2006,
-    publisher    = {Springer},
-    series       = {Springer Ser. Oper. Res. Financ. Eng.},
-    edition      = {Second}
-}
-
-@article{Porcelli_Toint_2017,
-    title        = {{BFO}, a trainable derivative-free brute force optimizer for nonlinear bound-constrained optimization and equilibrium computations with continuous and discrete variables},
-    author       = {Porcelli, M. and Toint, Ph. L.},
-    year         = 2017,
-    journal      = {ACM Trans. Math. Software},
-    volume       = 44,
-    pages        = 6
-}
-
-@article{Porcelli_Toint_2022,
-    title        = {Exploiting problem structure in derivative free optimization},
-    author       = {Porcelli, M. and Toint, Ph. L.},
-    year         = 2022,
-    journal      = {ACM Trans. Math. Software},
-    volume       = 48,
-    pages        = {1--25}
+    pages        = {287--404},
+    year         = 2019,
 }
 
 @article{Powell_1975,
     title        = {A view of unconstrained minimization algorithms that do not require derivatives},
     author       = {Powell, M. J. D.},
-    year         = 1975,
     journal      = {ACM Trans. Math. Software},
     volume       = 1,
-    pages        = {97--107}
-}
-
-@inproceedings{Powell_1994,
-    title        = {A direct search optimization method that models the objective and constraint functions by linear interpolation},
-    author       = {Powell, M. J. D.},
-    year         = 1994,
-    booktitle    = {Advances in Optimization and Numerical Analysis},
-    publisher    = {Springer},
-    volume       = 275,
-    pages        = {51--67},
-    editor       = {Gomez, S. and Hennart, J. P.}
+    pages        = {97--107},
+    year         = 1975,
 }
 
 @article{Powell_1998,
     title        = {Direct search algorithms for optimization calculations},
     author       = {Powell, M. J. D.},
-    year         = 1998,
     journal      = {Acta Numer.},
     volume       = 7,
-    pages        = {287--336}
+    pages        = {287--336},
+    year         = 1998,
 }
 
 @article{Powell_2002,
     title        = {{UOBYQA}: unconstrained optimization by quadratic approximation},
     author       = {Powell, M. J. D.},
-    year         = 2002,
     journal      = {Math. Program.},
     volume       = 92,
-    pages        = {555--582}
+    pages        = {555--582},
+    year         = 2002,
 }
 
 @article{Powell_2004a,
-    title        = {Least Frobenius norm updating of quadratic models that satisfy interpolation conditions},
+    title        = {Least \reviewed{{F}robenius} norm updating of quadratic models that satisfy interpolation conditions},
     author       = {Powell, M. J. D.},
-    year         = 2004,
     journal      = {Math. Program.},
     volume       = 100,
-    pages        = {183--215}
+    pages        = {183--215},
+    year         = 2004,
 }
 
 @inproceedings{Powell_2004b,
     title        = {On updating the inverse of a {KKT} matrix},
     author       = {Powell, M. J. D.},
-    year         = 2004,
     booktitle    = {Numerical Linear Algebra and Optimization},
+    editor       = {Yuan, Y.},
     publisher    = {Science Press},
     pages        = {56--78},
-    editor       = {Yuan, Y.}
+    year         = 2004,
 }
 
 @inproceedings{Powell_2006,
     title        = {The {NEWUOA} software for unconstrained optimization without derivatives},
     author       = {Powell, M. J. D.},
-    year         = 2006,
     booktitle    = {Large-Scale Nonlinear Optimization},
-    publisher    = {Springer},
+    editor       = {{Di Pillo}, G. and Roma, M.},
     series       = {Nonconvex Optimization and Its Applications},
+    publisher    = {Springer},
     volume       = 83,
     pages        = {255--297},
-    editor       = {{Di Pillo}, G. and Roma, M.}
+    year         = 2006,
 }
 
 @techreport{Powell_2009,
     title        = {The {BOBYQA} algorithm for bound constrained optimization without derivatives},
     author       = {Powell, M. J. D.},
-    year         = 2009,
     number       = {DAMTP 2009/NA06},
-    institution  = {Department of Applied Mathematics and Theoretical Physics, University of Cambridge}
+    institution  = {Department of Applied Mathematics and Theoretical Physics, University of Cambridge},
+    year         = 2009,
 }
 
 @article{Powell_2013,
-    title        = {Beyond symmetric {Broyden} for updating quadratic models in minimization without derivatives},
+    title        = {Beyond symmetric {B}royden for updating quadratic models in minimization without derivatives},
     author       = {Powell, M. J. D.},
-    year         = 2013,
     journal      = {Math. Program.},
     volume       = 138,
-    pages        = {475--500}
+    pages        = {475--500},
+    year         = 2013,
 }
 
 @article{Qian_Yu_2021,
     title        = {Derivative-free reinforcement learning: a review},
     author       = {Qian, H. and Yu, Y.},
-    year         = 2021,
     journal      = {Front. Comput. Sci.},
     volume       = 15,
-    pages        = 156336
+    pages        = 156336,
+    year         = 2021,
 }
 
 @phdthesis{Ragonneau_2022,
     title        = {Model-Based Derivative-Free Optimization Methods and Software},
     author       = {Ragonneau, T. M.},
+    school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
     year         = 2022,
-    school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University}
-}
-
-@misc{Ragonneau_Zhang_2021,
-    title        = {{PDFO: Cross-Platform Interfaces for Powell's Derivative-Free Optimization Solvers}},
-    author       = {Ragonneau, T. M. and Zhang, Z.},
-    year         = 2021,
-    howpublished = {\url{https://www.pdfo.net/}}
 }
 
 @misc{Ragonneau_Zhang_2023,
     title        = {{COBYQA: Constrained Optimization BY Quadratic Approximations}},
     author       = {Ragonneau, T. M. and Zhang, Z.},
+    howpublished = {\url{https://www.cobyqa.com}},
     year         = 2023,
-    howpublished = {\url{https://www.cobyqa.com/}}
 }
 
 @article{Rios_Sahinidis_2013,
     title        = {Derivative-free optimization: a review of algorithms and comparison of software implementations},
     author       = {Rios, L. M. and Sahinidis, N. V.},
-    year         = 2013,
     journal      = {J. Global Optim.},
     volume       = 56,
-    pages        = {1247--1293}
+    pages        = {1247--1293},
+    year         = 2013,
 }
 
 @inproceedings{Wild_2008,
     title        = {{MNH}: a derivative-free optimization algorithm using minimal norm {Hessians}},
     author       = {Wild, S. M.},
+    booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods},
     year         = 2008,
-    booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods}
 }
 
 @misc{Xie_Yuan_2022,
     title        = {Least {$H^2$} norm updating quadratic interpolation model function for derivative-free trust-region algorithms},
     author       = {Xie, P. and Yuan, Y.},
+    howpublished = {arXiv:2302.12017},
     year         = 2023,
-    howpublished = {arXiv:2302.12017}
 }
 
 @article{Yuan_2015,
     title        = {Recent advances in trust region algorithms},
     author       = {Yuan, Y.},
-    year         = 2015,
     journal      = {Math. Program.},
     volume       = 151,
-    pages        = {249--281}
+    pages        = {249--281},
+    year         = 2015,
 }
 
 @phdthesis{Zhang_2012,
     title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
     author       = {Zhang, Z.},
+    school       = {Chinese Academy of Sciences},
     year         = 2012,
-    school       = {Chinese Academy of Sciences}
 }
 
 @article{Zhang_2014,
     title        = {Sobolev seminorm of quadratic functions with applications to derivative-free optimization},
     author       = {Zhang, Z.},
-    year         = 2014,
     journal      = {Math. Program.},
     volume       = 146,
-    pages        = {77--96}
+    pages        = {77--96},
+    year         = 2014,
 }
